--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>Wine</title>
 
-    <link rel='stylesheet' href='css/loader.css'>
+    <link rel='stylesheet' href='./loader.css'>
   </head>
   <body>
     <noscript>
