--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
     <title>MyCellar</title>
     <style>
       body {
@@ -105,6 +103,7 @@
         }
       }
     </style>
+    <script src="../src/components/Entry.js"></script>
   </head>
   <body>
     <noscript>
